Add action user to transfer workflows
